[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["JordanBlocher <jordanblocher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"
networkx = "^2.8.5"
prettytable = "^3.3.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
